2008-04-18  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: ensure all classes have a default
	  construction method

2008-04-17  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi: restore compatibility with sqlite < 3.5.0

2008-04-17  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error when using `this' or
	  `base' access outside of instance methods

2008-04-16  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (EnumClass, FlagsClass, FlagsValue): complete
	glib-2.0 enum and flags bindings, fixes bug 528114

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* vapi/sdl-gfx.vapi, vapi/sdl-image.vapi, vapi/sdl-mixer.vapi,
	  vapi/sdl.vapi: replace `pointer' by void*, patch by Levi Bard

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix error handling in static
	  constructors, fixes bug 528111

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* vapi/dbus-glib-1.vapi: fix dbus_connection_setup_with_g_main binding

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormemberaccess.vala:

	  Fix base access with virtual interface methods, fixes bug 528457

	* tests/classes-methods.vala: test base access

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: improve error handling, fixes bug 528431

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala:

	  Fix generated C code when calling struct methods

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala:

	  Fix generated C code when passing structs by reference,
	  fixes bug 528414

2008-04-16  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/vala.h, vala/valablock.vala,
	  vala/valacatchclause.vala, vala/valacfgbuilder.vala,
	  vala/valaclass.vala, vala/valacodecontext.vala,